--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react-native-compress-image": "^2.0.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-resizer": "^1.0.0",
-    "react-navigation": "^1.0.0-beta.27"
+    "react-native-responsive-dimensions": "^1.0.2",
+    "react-navigation": "^1.0.0-beta.27",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
