--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "axios": "^0.17.1",
     "react": "16.2.0",
     "react-native": "0.52.2",
+    "react-native-checkbox": "^2.0.0",
+    "react-native-checkbox-master": "^1.1.2",
     "react-native-compress-image": "^2.0.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-resizer": "^1.0.0",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-navigation": "^1.0.0-beta.27",
+    "react-numeric-input": "^2.2.3",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
